--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,9 @@
    "chrome_url_overrides" : {
      "newtab": "newtab.html"
    },
-    "permissions": ["activeTab"]
+    "permissions": ["activeTab"],
+    "content_security_policy": "script-src 'self' https://code.jquery.com/jquery-3.3.1.js; object-src 'self'"
+
+
 }
+
